--- a/_posts/2016-06-29-es6 - Copy.md
+++ b/_posts/2016-06-29-es6 - Copy.md
@@ -6,7 +6,7 @@ crawlertitle: "About ES6"
 summary: "What's new in ES6 - Test"
 date:   2017-06-29 20:09:47 +0700
 categories: posts
-tags: ['front-end,'test']
+tags: ['front-end','test']
 author: redVi
 ---
 Before you dive into this book, you should have a solid working proficiency over JavaScript up to the most recent standard (at the time of this writing), which is commonly called ES5 (technically ES 5.1). Here, we plan to talk squarely about the upcoming ES6, as well as cast our vision beyond to understand how JS will evolve moving forward.
